--- a/Application/build.gradle
+++ b/Application/build.gradle
@@ -13,17 +13,17 @@ List<String> dirs = [
 
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 28
+    buildToolsVersion "28.0.2"
 
     defaultConfig {
         minSdkVersion 21
-        targetSdkVersion 25
+        targetSdkVersion 28
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     sourceSets {
@@ -43,16 +43,31 @@ android {
 
 
 dependencies {
-    compile "com.android.support:support-v4:25.3.1"
-    compile "com.android.support:support-v13:25.3.1"
-    compile "com.android.support:cardview-v7:25.3.1"
-    compile "com.android.support:appcompat-v7:25.3.1"
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "com.android.support:support-v4:28.0.0-rc01"
+    implementation "com.android.support:support-v13:28.0.0-rc01"
+    implementation "com.android.support:cardview-v7:28.0.0-rc01"
+    implementation "com.android.support:appcompat-v7:28.0.0-rc01"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation ("ch.simas.jtoggl:jtoggl:8.0.0") {
+        exclude (group:'javax.inject', module:'javax.inject')
+//        exclude (group:'org.glassfish.jersey.core', module:'jersey-client')
+    }
+//    implementation "org.glassfish.jersey.core:jersey-client:2.27"
+//    implementation "org.glassfish.jersey.core:jersey-server:2.27"
+//    implementation ("org.glassfish.jersey.inject:jersey-hk2:2.27") {
+//        exclude (group:'javax.inject', module:'javax.inject')
+//    }
+    implementation "javax.activation:activation:1.1.1"
+    implementation "org.jetbrains.anko:anko-commons:0.10.4"
+    implementation "org.osgi:org.osgi.core:6.0.0"
 }
 
 
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://maven.google.com"
+    }
 }
 
